syntax = "proto3";

package mpataki.go_job_queue.proto.job.v1;

option go_package = "github.com/mpataki/go-job-queue/proto/gen/go/mpataki/go_job_queue/proto/job/v1;jobv1";

service JobService {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {}
  rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {}
  rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse) {}
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse) {}
}

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_RUNNING = 2;
  JOB_STATUS_COMPLETED = 3;
  JOB_STATUS_FAILED = 4;
}

message Job {
  string id = 1;
  string name = 2;
  string payload = 3;
  JobStatus status = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CreateJobRequest {
  string name = 1;
  string payload = 2;
}

message CreateJobResponse {
  Job job = 1;
}

message GetJobRequest {
  string id = 1;
}

message GetJobResponse {
  Job job = 1;
}

message ListJobsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListJobsResponse {
  repeated Job jobs = 1;
  string next_page_token = 2;
}

message UpdateJobRequest {
  string id = 1;
  string name = 2;
  string payload = 3;
  JobStatus status = 4;
}

message UpdateJobResponse {
  Job job = 1;
}

message DeleteJobRequest {
  string id = 1;
}

message DeleteJobResponse {}
